[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Tiles/MovingPlatform_sprite.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Moving_Platform_H.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 96, 8 )

[node name="Moving_Platform_H" type="Node2D"]
script = ExtResource( 2 )

[node name="Platform" type="KinematicBody2D" parent="."]
collision_mask = 2
motion/sync_to_physics = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Platform"]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Platform"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/Area2D"]
position = Vector2( 0, -27 )
shape = SubResource( 2 )

[node name="Mouvement_tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[connection signal="body_entered" from="Platform/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Platform/Area2D" to="." method="_on_Area2D_body_exited"]
